@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.45 2004/06/07 22:42:27 xtraeme Exp $
+# $NetBSD: Makefile,v 1.46 2004/06/28 13:58:52 abs Exp $
 
 DISTNAME=       jakarta-tomcat-${TOMCAT_VERSION}
-PKGREVISION=	1
 CATEGORIES=	www java
 # The list of sites to download is generated by a jakarta website.
 # The getsite.sh script parses the HTML and extracts the urls.
@@ -11,11 +10,11 @@ MAINTAINER=	erh@NetBSD.org
 HOMEPAGE=	http://jakarta.apache.org/tomcat/
 COMMENT=	The Apache Project's Java Servlet 2.4 and JSP 2.0 server
 
-TOMCAT_VERSION=	5.0.24
+TOMCAT_VERSION=	5.0.25
 
 # This needs java 1.4 or higher.
 USE_JAVA2=	yes
-USE_BUILDLINK2=	yes
+USE_BUILDLINK3=	yes
 
 TOMCAT_LIB=     ${PREFIX}/tomcat
 CATALINA_DIR=	Catalina/localhost
