@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.9 2004/06/07 22:42:27 xtraeme Exp $
+@comment $NetBSD: PLIST,v 1.10 2004/06/28 13:58:52 abs Exp $
 tomcat/LICENSE
 tomcat/NOTICE
 tomcat/RELEASE-NOTES
@@ -279,6 +279,7 @@ tomcat/webapps/jsp-examples/WEB-INF/classes/org/apache/jsp/tagplugin/foreach_jsp
 tomcat/webapps/jsp-examples/WEB-INF/classes/org/apache/jsp/tagplugin/foreach_jsp$7.class
 tomcat/webapps/jsp-examples/WEB-INF/classes/org/apache/jsp/tagplugin/foreach_jsp$8.class
 tomcat/webapps/jsp-examples/WEB-INF/classes/org/apache/jsp/tagplugin/foreach_jsp$9.class
+tomcat/webapps/jsp-examples/WEB-INF/classes/org/apache/jsp/tagplugin/foreach_jsp$10.class
 tomcat/webapps/jsp-examples/WEB-INF/classes/org/apache/jsp/tagplugin/foreach_jsp.class
 tomcat/webapps/jsp-examples/WEB-INF/classes/org/apache/jsp/tagplugin/if_jsp.class
 tomcat/webapps/jsp-examples/WEB-INF/classes/org/apache/jsp/xml/xml_jsp.class
@@ -1311,7 +1312,6 @@ tomcat/webapps/tomcat-docs/images/update.gif
 tomcat/webapps/tomcat-docs/images/void.gif
 tomcat/webapps/tomcat-docs/index.html
 tomcat/webapps/tomcat-docs/introduction.html
-tomcat/webapps/tomcat-docs/jas
 tomcat/webapps/tomcat-docs/jasper-howto.html
 tomcat/webapps/tomcat-docs/jasper/docs/api/allclasses-frame.html
 tomcat/webapps/tomcat-docs/jasper/docs/api/allclasses-noframe.html
@@ -1344,6 +1344,7 @@ tomcat/webapps/tomcat-docs/jasper/docs/api/org/apache/jasper/compiler/JspRuntime
 tomcat/webapps/tomcat-docs/jasper/docs/api/org/apache/jasper/compiler/JspUtil.ValidAttribute.html
 tomcat/webapps/tomcat-docs/jasper/docs/api/org/apache/jasper/compiler/JspUtil.html
 tomcat/webapps/tomcat-docs/jasper/docs/api/org/apache/jasper/compiler/Localizer.html
+tomcat/webapps/tomcat-docs/jasper/docs/api/org/apache/jasper/compiler/Node.AttributeDirective.html
 tomcat/webapps/tomcat-docs/jasper/docs/api/org/apache/jasper/compiler/Node.AttributeGenerator.html
 tomcat/webapps/tomcat-docs/jasper/docs/api/org/apache/jasper/compiler/Node.ChildInfo.html
 tomcat/webapps/tomcat-docs/jasper/docs/api/org/apache/jasper/compiler/Node.Comment.html
